[package]
name = "lenslm"
version.workspace = true
edition.workspace = true
description = "LensLM desktop shell — Tauri v2 IPC bridge over lens-core."
# Application binary, not published to crates.io (no license chosen yet).
publish = false

# Produce a binary named "LensLM" (shown in logs and the macOS app/menu name).
[[bin]]
name = "LensLM"
path = "src/main.rs"

[lints]
workspace = true

[features]
# issue #42: the Apple-native ASR backend (SpeechAnalyzer via a Swift @_cdecl
# C-ABI bridge). Pulls NO cross-platform deps — it only activates the Swift build
# in build.rs and the cfg-gated `asr` module (both aarch64-apple-darwin only). Made
# default-on for the shipping macOS target below so it compiles under signoff.
apple-native-asr = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lens-core = { path = "../lens-core" }
# `tauri::ipc::Channel` and `app.path()` are available without extra features.
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Block on async engine init inside the synchronous `.setup` closure.
tokio = { workspace = true }
# Native file picker for the onboarding "Add sources" step (Tauri 2.x plugin).
tauri-plugin-dialog = "2"
# Write exported notes to the path chosen via the save-file dialog (issue #25).
tauri-plugin-fs = "2"
# Copy exported notes text to the OS clipboard (issue #25).
tauri-plugin-clipboard-manager = "2"
# Persist the main window's size/position across restarts (Tauri 2.x plugin).
tauri-plugin-window-state = "2"
# `#[async_trait]` to implement lens-core's `JsRenderer` trait (issue #78).
async-trait = "0.1"
# `FutureExt::catch_unwind` so a panic in the untrusted-JS render body still
# schedules the explicit webview teardown before re-propagating (issue #78, C2).
futures = "0.3"
# Unique offscreen render-window labels (`lens-render-<uuid>`); v7 for time-order.
uuid = { workspace = true }

# macOS: used ONLY by the inactive `OnscreenAlphaZero` render fallback (#78), which
# sets the render window's native NSWindow alphaValue to 0 (a public AppKit API; no
# `macos-private-api` needed). The production path is `Offscreen` (off-screen +
# invisible), which needs no native calls; this dep is retained so the fallback
# compiles if ever activated. Version tracks the objc2 already in the tree via tauri.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

# issue #91: turn ON candle + Metal (Apple GPU) embedding for the SHIPPING app on
# Apple Silicon. Cargo UNIONS this with the base `lens-core` dep in [dependencies],
# so on aarch64-apple-darwin lens-core is built with `native-ml-metal` (candle is
# the default embedding engine for supported models — Metal for bulk, candle-CPU
# for queries), while every other target keeps the feature-less fastembed build.
# The feature is target-gated in lens-core too, so it can ONLY activate here.
#
# issue #42: also union `local-whisper` (the cross-platform ASR baseline, which
# lens-core has default-on anyway) so lens-core's Whisper path is present in the
# Mac build. resolver = "2" honours this per-target feature union (the
# `native-ml-metal` precedent above).
#
# NOTE: `apple-native-asr` CANNOT be auto-activated via a self-`path` dep here — a
# binary crate depending on itself is a Cargo cycle error. Cargo has no per-target
# `default` toggle either. So the Swift bridge's compile proof under signoff is via
# `scripts/signoff.sh` passing `-p lenslm --features apple-native-asr` on Mac (see
# that script's ASR note). Building without the feature keeps the bridge compiled
# out and the router on Whisper — the accepted fallback in the #42 plan (§3).
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
lens-core = { path = "../lens-core", features = ["native-ml-metal", "local-whisper"] }
# issue #193: the MOSS-TTS-Local sidecar host (`moss` module, aarch64-macOS only).
# `process`/`io-util` add `tokio::process::Command` + async `BufReader`/line IO for
# the JSON-over-stdio pipe; `tokio-util` supplies the `CancellationToken` the
# `TtsSidecar::synthesize_turn` signature takes. MLX itself lives in the
# uv-managed sidecar venv (sidecar/mlx-speech), fetched on first run — no MLX
# crate here, so this module compiles out on every other target.
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-util = { workspace = true }
# issue #193: the resolver's one-time `uv` provisioning download. `blocking`
# because the resolver is a sync `Fn` driven via `spawn_blocking`; `rustls` (no
# OpenSSL) mirrors the workspace HTTP policy. Same `=0.13.4` pin as elsewhere so
# no second reqwest copy is added; extraction uses the OS `tar` (no tar/flate2).
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls", "blocking"] }
# SHA256 integrity check on the downloaded `uv` archive (same pin as lens-core).
sha2 = "=0.10.9"

[dev-dependencies]
# The `test` feature (mock runtime) is unioned in only for test builds.
tauri = { version = "2", features = ["test"] }
# Temp dirs for the recent-documents scan test.
tempfile = { workspace = true }
# Inspector-command test seeds chunk + embedding_index rows via raw SQL on the
# engine's pool (the embed worker is stubbed under `for_test`, so ingest yields
# none); ids/timestamps mint via uuid/chrono — test-only deps (uuid is a
# non-dev dependency now, used by the render-window labels).
sqlx = { workspace = true }
chrono = { workspace = true }
# Apple-ASR smoke test fetches the public-domain jfk.wav sample (mirrors
# lens-core's gated whisper test); rustls only, no OpenSSL. Same pin as lens-core.
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls"] }
