[project]
name = "mlx-speech-sidecar"
version = "0.1.0"
description = "MOSS-TTS-Local IPC sidecar spawned by src-tauri's MossSidecar (#193 / 161e). Apple-Silicon-only."
requires-python = ">=3.13"
dependencies = [
    # Pin exact: the sidecar runs via `uv run` against this lockfile, so an
    # unpinned range would let behavior float across machines/time.
    "mlx-speech==0.4.3",
    "numpy>=1.26,<3",
]

[tool.uv]
package = false
